--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,4 +1,4 @@
-  @import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
+
 .navbar {
     width: 100%;
     height: 80px;
@@ -16,7 +16,7 @@
   }
 
   .logo{
-    font-family: 'Luxurious Roman';
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 38px;
   }
   .cart a {
