--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -16,7 +16,10 @@
     grid-template-columns: repeat(4,auto);
 }
 .product{
-    padding: 50px 45px;
+    border-radius: 10px;
+    box-shadow:2px 2px 2px 2px rgba(0, 0, 0, 0.471);
+    margin: 50px 45px;
+    padding: 10px 0;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -30,6 +33,7 @@
 }
 .product img {
     width: 270px;
+    border-radius: 15px;
 }
 .product .title{
     font-size: large;
@@ -76,8 +80,12 @@
     }
 }
 @media (max-width:750px) {
-    .products{
-        grid-template-columns: auto;
+    .product{
+        width: 150px;
+        margin: 15px 10px;
+    }
+    .product img{
+        width: 130px;
     }
     .shopTitle{
         font-size: 24px;
