--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -6,7 +6,7 @@
     align-items: center;
 
     font-size: 38px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 .products{
     text-align: center;
